tests/errors/test2.c
int f()
{
    return;
}
void main()
{
    int a = f();
}
